--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^0.14.0+5
+  firebase_auth: ^0.16.1
   google_sign_in: ^4.0.7
   provider: ^3.2.0
-  cloud_firestore: ^0.12.9+5
+  cloud_firestore: ^0.13.7
   intl: ^0.16.1
   rxdart: ^0.24.0
 
